--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 @import 'colors';
 
 $body-font-family: 'Roboto', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$base-font-size: 13pt;
-$primary-color: $bay-of-many;
+$base-font-size: 11pt;
+$primary-color: $mine-shaft;
+$secondary-color: $cello;
+$tertiary-color: $teak;
 $container-width: 21cm;
