--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,2 +1,4 @@
 // http://chir.ag/projects/name-that-color/#26478d
-$bay-of-many: #26478d;
+$mine-shaft: #303030;
+$teak: #B38F6B;
+$cello: #22405C;
