--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,15 +3,17 @@
 .header__list {
   margin: 0.4cm 0 0;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
+  column-gap: 0.4cm;
 }
 
 .header__item {
-  margin: 0.05cm 0.5cm 0 0;
+  margin: 0.05cm 0 0 0;
 }
 
 .header__icon {
-  width: 0.7cm;
+  width: 0.4cm;
+  margin-right: 0.2cm;
 }
 
 .header__avatar {
