added code-samples, find-me-online components and updated header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
 <app-profile></app-profile>
+<app-code-samples></app-code-samples>
+<app-find-me-online></app-find-me-online>
