--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -56,3 +56,13 @@ h3 {
   padding-bottom: 0.2cm;
   margin-bottom: 0.4cm;
 }
+
+.links-list__item {
+  margin: 0.05cm 0 0 0;
+}
+
+.links-list__icon {
+  width: 0.4cm;
+  margin-right: 0.2cm;
+  color: $secondary-color;
+}
