--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,13 +4,13 @@
     <h2 class="header__h2"><span class="italic font-weight-normal">Contract</span> Front End Developer</h2>
 
     <ul class="header__list">
-      <li class="flex align-items-center header__item" *ngFor="let i of headerList">
-        <a class="flex align-items-center header__link" [attr.href]="i.href">
-          <fa-icon class="header__icon" [icon]="i.icon"></fa-icon>{{ i.label }}
+      <li class="flex align-items-center links-list__item" *ngFor="let i of linksList">
+        <a class="flex align-items-center" [attr.href]="i.href" target="_blank">
+          <fa-icon class="links-list__icon" [icon]="i.icon"></fa-icon>{{ i.label }}
         </a>
       </li>
-      <li class="flex align-items-center header__item">
-        <svg class="header__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 30">
+      <li class="flex align-items-center links-list__item">
+        <svg class="links-list__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 30">
           <clipPath id="t">
             <path d="M30,15 h30 v15 z v15 h-30 z h-30 v-15 z v-15 h30 z" />
           </clipPath>
