split layout to 2 columns

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-header></app-header>
-<app-profile></app-profile>
-<app-code-samples></app-code-samples>
-<app-find-me-online></app-find-me-online>
+<div class="grid-container">
+  <app-profile></app-profile>
+  <div>
+    <app-code-samples></app-code-samples>
+    <app-find-me-online></app-find-me-online>
+  </div>
+</div>
