--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,9 +1,16 @@
 <h3>Profile</h3>
 <p>
-  London based <strong>contract</strong> front end developer with
-  <strong>{{ yearsOfExperience }} years commercial experience</strong>. Proficient in taking complex projects from
-  conception to reality using solid programming principles and agile methodologies. Forward thinking approach to
-  developing front end architecture that’s both scalable and modular whilst also conforming to web accessibility
-  standards.
+  London based senior <strong>contract</strong> front end developer with
+  <strong>{{ yearsOfExperience }} years experience</strong>.
+</p>
+
+<p>
+  Proficient in taking complex projects from conception to reality using solid programming principles and agile
+  methodologies.
+</p>
+
+<p>
+  Forward thinking approach to developing front end architecture that’s both scalable and modular whilst also conforming
+  to web accessibility standards.
 </p>
 <p><strong>Seeking angular focused front end contract role in london.</strong></p>
