added other skills

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -8,4 +8,10 @@
       </dl>
     </div>
   </div>
+
+  <h3>Other Skills</h3>
+  <p>
+    <strong>Git</strong>, <strong>Git flow</strong>, Slack, MySQL, Trello, zeplin, Grunt, Gulp, YAML, Electron, font
+    awesome, icomoon, masonry
+  </p>
 </div>
