added section-spacer variable for consistency, added experience wip component, other styling tweaks and improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,8 @@
+@import 'variables';
+
 .grid-container {
   display: grid;
   grid-template-columns: 65% 30%;
   column-gap: 5%;
+  margin-bottom: $section-spacer;
 }
