--- a/src/app/components/find-me-online/find-me-online.component.html
+++ b/src/app/components/find-me-online/find-me-online.component.html
@@ -1,8 +1,10 @@
-<h3>Find me online</h3>
-<ul>
-  <li class="flex align-items-center links-list__item" *ngFor="let i of linksList">
-    <a class="flex align-items-center" [attr.href]="i.href" target="_blank">
-      <fa-icon class="links-list__icon" [icon]="i.icon"></fa-icon>{{ i.label }}
-    </a>
-  </li>
-</ul>
+<div class="find-me-online">
+  <h3>Find me online</h3>
+  <ul class="find-me-online__list">
+    <li class="flex align-items-center links-list__item" *ngFor="let i of linksList">
+      <a class="flex align-items-center" [attr.href]="i.href" target="_blank">
+        <fa-icon class="links-list__icon" [icon]="i.icon"></fa-icon>{{ i.label }}
+      </a>
+    </li>
+  </ul>
+</div>
