commit wip work for experience component

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,1 +1,16 @@
-<h3>Experience</h3>
+<div class="experience">
+  <h3>Experience</h3>
+  <div class="experience__item" *ngFor="let job of experienceHistory">
+    <div class="experience__grid-container justify-space-between">
+      <h4>{{ job.title }}</h4>
+      <div>
+        <span *ngIf="job.renewals" class="experience__renewals">Includes {{ job.renewals }} renewal</span>
+        <fa-icon class="links-list__icon" [icon]="faCalendarAlt"></fa-icon> {{ job.dates.from }} - {{ job.dates.to }}
+      </div>
+    </div>
+    <p>{{ job.description }}</p>
+    <ul class="experience__achievements">
+      <li *ngFor="let i of job.achievements">{{ i }}</li>
+    </ul>
+  </div>
+</div>
