experience copy updates and typography scss tweaks

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -17,4 +17,10 @@
       <li *ngFor="let i of job.achievements">{{ i }}</li>
     </ul>
   </div>
+  <div class="text-center">
+    <span class="experience__history-copy">For full employment history please visit</span>
+    <a href="https://www.linkedin.com/in/omarCreativeDev/" target="_blank" class="font-weight-bold">
+      <fa-icon class="links-list__icon" [icon]="faLinkedinIn"></fa-icon>linkedin.com/in/omarCreativeDev</a
+    >
+  </div>
 </div>
