--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header flex justify-space-between">
   <div class="flex flex-direction-column">
     <h1 class="header__h1">Omar Mirza</h1>
-    <h2 class="header__h2"><span class="italic font-weight-normal">Contract</span> Front End Developer</h2>
+    <h2 class="header__h2"><span class="text-italic font-weight-normal">Contract</span> Front End Developer</h2>
 
     <ul class="header__list">
       <li class="flex align-items-center links-list__item" *ngFor="let i of linksList">
