--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -24,12 +24,16 @@ a {
   text-decoration: none;
 }
 
-.italic {
+.text-italic {
   font-style: italic;
 }
 
 .font-weight-normal {
   font-weight: normal;
+}
+
+.text-center {
+  text-align: center;
 }
 
 h1, h2, h3, h4 {
