--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -20,7 +20,7 @@
   <div class="text-center">
     <span class="experience__history-copy">For full employment history please visit</span>
     <a href="https://www.linkedin.com/in/omarCreativeDev/" target="_blank" class="font-weight-bold">
-      <fa-icon class="links-list__icon" [icon]="faLinkedinIn"></fa-icon>linkedin.com/in/omarCreativeDev</a
+      <fa-icon class="links-list__icon" [icon]="faLinkedIn"></fa-icon>linkedIn.com/in/omarCreativeDev</a
     >
   </div>
 </div>
