--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,6 +16,6 @@
   </p>
 
   <p class="profile__copy">
-    <strong>Seeking angular focused front end contract role in london.</strong>
+    <strong>Seeking angular or react focused front end contract role in london.</strong>
   </p>
 </div>
