--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,7 +5,7 @@ body {
 
   @media screen {
     padding: 0.75cm;
-    box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+    box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
     margin: 1cm auto;
   }
 }
