--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,6 +16,6 @@
   </p>
 
   <p class="profile__copy">
-    <strong>Seeking angular / react focused front end contract role in london outside IR35.</strong>
+    <strong>Seeking front end contract role outside IR35.</strong>
   </p>
 </div>
